--- a/Bab/bab4.tex
+++ b/Bab/bab4.tex
@@ -286,10 +286,10 @@ Berikut ini merupakan fungsi-fungsi yang terdapat pada kelas \textit{Room}:
 	\label{fig:class_minimum_camera_placement_solver_lp_solve}
 \end{figure}
 
-Kelas ini merepresentasikan pemecah masalah penempatan kamera CCTV dalam ruangan agar berjumlah minimum dengan menggunakan kakas \textit{lpsolve}. Kelas ini merupakan turunan dari kelas MinimumCameraPlacementSolver. Diagram kelas \textit{MinimumCameraPlacementSolverLPSolve} dapat dilihat pada gambar~\ref{fig:class_minimum_camera_placement_solver_lp_solve}. Berikut ini merupakan fungsi-fungsi yang terdapat pada kelas \textit{MinimumCameraPlacementSolverLPSolve}:
+Kelas ini merepresentasikan pemecah masalah penempatan kamera CCTV dalam ruangan agar berjumlah minimum dengan menggunakan kakas \textit{lp{\_}solve}. Kelas ini merupakan turunan dari kelas MinimumCameraPlacementSolver. Diagram kelas \textit{MinimumCameraPlacementSolverLPSolve} dapat dilihat pada gambar~\ref{fig:class_minimum_camera_placement_solver_lp_solve}. Berikut ini merupakan fungsi-fungsi yang terdapat pada kelas \textit{MinimumCameraPlacementSolverLPSolve}:
 \begin{itemize}
 	\item \textbf{\textit{solve}() \(\rightarrow\) \textit{void}}\\
-	Fungsi ini berguna untuk menyelesaikan masalah penempatan kamera CCTV dalam ruangan agar berjumlah minimum dengan menggunakan kakas \textit{lpsolve}.
+	Fungsi ini berguna untuk menyelesaikan masalah penempatan kamera CCTV dalam ruangan agar berjumlah minimum dengan menggunakan kakas \textit{lp{\_}solve}.
 \end{itemize}
 
 
