--- a/referensi.bib
+++ b/referensi.bib
@@ -84,15 +84,6 @@
 %
 %	Contoh penulisan di file bib:
 
-@book{berg:08:compgeom,
-	author		= {Mark de Berg and Otfried Cheong and Marc J. van Kreveld and Mark Overmars},
-	title   	= {Computational Geometry: Algorithms and Applications},
-	edition		= {3rd},
-	year   		= {2008},
-	publisher	= {Springer-Verlag},
-	address		= {Berlin},
-}
-
 %	2. Bab di dalam buku.
 %	Di bagian ini, buku merupakan kumpulan bab dari pengarang-pengarang yang berbeda.
 %	Buku tersebut tidak memiliki pengarang, tetapi editor. Pengarang hanya menulis satu 
@@ -119,17 +110,6 @@
 %
 %	Contoh penulisan di file bib:
 
-@incollection{kreveld:04:GIS,
-	author 		= {Marc J. van Kreveld},								
-	title 		= {Geographic Information Systems},						
-	editor 		= {Jacob E. Goodman and Joseph O'Rourke},				
-	booktitle 	= {Handbook of Discrete and Computational Geometry},
-	edition		= {2nd},
-	year 		= {2004},
-	publisher	= {Chapman \& Hall/CRC},
-	address		= {Boca Raton},
-}
-
 %	3. Artikel dari jurnal
 %	Artikel (atau paper) yang berasal dari jurnal ilmiah. 
 %
@@ -145,15 +125,6 @@
 %	Buchin, K., Buchin, M., van Kreveld, M. J., Löffler, M., Silveira, R. I., Wenk, C., dan Wiratma, L. (2013) Median trajectories. Algorithmica, 66, 595-614. 
 %
 %	Contoh penulisan di file bib:
-
-@article{buchin:13:median,
-	author		= {Kevin Buchin and Maike Buchin and Marc J. van Kreveld and Maarten L{\"{o}}ffler and Rodrigo I. Silveira and Carola Wenk and Lionov Wiratma},
-	title     	= {Median Trajectories},
-	journal   	= {Algorithmica},
-	volume    	= {66},
-	pages     	= {595--614},
-	year      	= {2013},
-}
 
 %	4. Artikel dari prosiding seminar/konferensi
 %	Artikel (atau paper) yang berasal dari prosiding seminar/konferensi ilmiah. 
@@ -174,17 +145,6 @@
 %	van Kreveld, M. J. dan Wiratma, L. (2011) Median trajectories using well-visited regions and shortest paths. Proceedings of the 19th ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, Chicago, USA, 1-4 November, pp. 241-250. ACM, New York.
 %
 %	Contoh penulisan di file bib:
-
-@inproceedings{kreveld:11:median,
-	author    	= {Marc J. van Kreveld and Lionov Wiratma},
-	title     	= {Median trajectories using well-visited regions and shortest paths},
-	pages     	= {241--250}, 	
-	booktitle 	= {Proceedings of the 19th ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems},	
-	year      	= {2011},
-	month		= {1-4 November},
-	address		= {Chicago, USA},
-	publisher	= {ACM, New York}
-}
 
 %	5. Skripsi/Thesis/Disertasi
 %	Skripsi S1, Thesis S2 atau Disertasi S3. 
@@ -208,30 +168,6 @@
 %
 %	Contoh penulisan di file bib:
 
-@undergraduatethesis{lionov:02:animasi, 
-	author		= {Lionov},
-	title     	= {Animasi Algoritma Sweepline Untuk Membangun Diagram Voronoi},
-	year      	= {2002},
-	school     	= {Universitas Katolik Parahyangan},
-	address		= {Indonesia},
-}
-
-@masterthesis{wiratma:10:following, 
-	author		= {Lionov Wiratma},
-	title     	= {Following The Majority: a New Algorithm For Computing a Median Trajectory},
-	year      	= {2010},
-	school     	= {Utrecht University},
-	address		= {The Netherlands},
-}
-
-@phdthesis{wiratma:22:later, 
-	author		= {Lionov Wiratma},
-	title     	= {Coming Not Too Soon, Later, Delay, Someday, Hopefully},
-	year      	= {2022},
-	school     	= {Utrecht University},
-	address		= {The Netherlands},
-}
-
 %	6. Technical/Scientific Report
 %	Pada umumnya, Technicalreport adalah laporan hasil penelitian ilmiah yang tidak diterbitkan ke dalam prosiding ataupun jurnal. 
 %	Technical report memiliki penomoran resmi karena diakui oleh universitas/organisasi, penomoran ini biasanya yang membedakan antara 
@@ -250,15 +186,6 @@
 %
 %	Contoh penulisan di file bib:
 
-@techreport{kreveld:07:watertight,
-	author 		= {Marc van kreveld and Thijs van Lankveld and Remco Veltkamp},
-	title 		= {Watertight Scenes from Urban LiDAR and Planar Surfaces},
-	number		= {UU-CS-2013-007},
-	year 		= {2013},
-	institution = {Utrecht University},
-	address 	= {The Netherlands},	
-}
-
 %	7. RFC (Request For Comments)
 %
 %	RFC (Request for Comments) adalah publikasi dari Internet Engineering Task Force (IETF) and the Internet Society (ISOC), organisasi(?)
@@ -275,15 +202,7 @@
 %	Contoh hasil di Daftar Referensi: 
 %	 Rekhter, Y. dan Li, T. (1994) A border gateway protocol 4 (bgp-4). RFC 1654. RFC Editor, http://www.rfc-editor.org.
 %
-%	Contoh penulisan di file bib:
-
-@rfc{RFC1654, 
-	author 		= {Yakov Rekhter and Tony Li},
-	title 		= {A Border Gateway Protocol 4 (BGP-4)},
-	number 		= {1654},
-	year 		= {1994}, 
-}
- 	
+%	Contoh penulisan di file bib:	
 
 %	8. Technical Documentation/Technical Manual
 %
@@ -304,30 +223,6 @@
 %	- Version 7.0 Nougat (2016) Android API Reference Manual. Google dan Open Handset Alliance. Mountain View, USA.
 %	Contoh penulisan di file bib:
 
-@manual{Z.500,
-	number 		= {ITU-T Z.500},
-	title 		= {Framework on formal methods in conformance testing},
-	year 		= {1997},
-	organization= {International Telecommunications Union},	
-	address 	= {Geneva, Switzerland},
-}
-
-@manual{unicode:16:stdv9,
-	number 		= {Version 9.0.0},
-	title 		= {The Unicode Standard},
-	year 		= {2016},
-	organization= {The Unicode Consortium},	
-	address 	= {Mountain View, USA},
-}
-
-@manual{google:16:and7,
-	number 		= {Version 7.0 Nougat},
-	title 		= {Android API Reference Manual},
-	year 		= {2016},
-	organization= {Google dan Open Handset Alliance},	
-	address 	= {Mountain View, USA},
-}
-
 %	9. Paten
 %
 %	Paten adalah hak eksklusif yang diberikan kepada penemu.
@@ -344,15 +239,6 @@
 %	 Webb, R., Daruca, O., dan Alfadian, P. (2012) Method of optimizing a text massage communication between a server and a secure element. Paten no. EP2479956 (A1). European Patent Organisation. Munich, Germany.
 %
 %	Contoh penulisan di file bib:
-
-@patent{webb:12:comm,
-	author		= {Ronaldo Webb and Olga Daruca and Pascal Alfadian},
-	title 		= {Method of optimizing a text massage communication between a server and a secure element},
-	number		= {EP2479956 (A1)},
-	year 		= {2012},
-	organization= {European Patent Organisation},	
-	address 	= {Munich, Germany},
-}
 
 %	10. Unpublished
 %
@@ -377,29 +263,13 @@
 %
 %	Contoh penulisan di file bib:
 
-@unpublished{wiratma:09:median,
-	author		= {Lionov Wiratma},
-	title		= {Median Trajectory},
-	year		= {2009},
-	note		= {Report for GMT Experimentation Project at Utrecht University},
-}
-
-@unpublished{lionov:11:cpoly,
-	author		= {Lionov},
-	title		= {Polymorphism pada {C++}},
-	year		= {2011},
-	note		= {Catatan kuliah AKS341 Pemrograman Sistem di Universitas Katolik Parahyangan, Bandung},
-	url			= {http://tinyurl.com/lionov},
-	access 		= {30 September 2016},	
-}
-
 %	11. Halaman Web 
 %
 %	TIDAK DIANJURKAN UNTUK DIGUNAKAN, KONSULTASIKAN DENGAN PEMBIMBING MASING-MASING
 %	(karena informasi yang beredar begitu saja di internet, bisa saja tidak akurat)
 %
 %	!!! KHUSUS MAHASISWA TEKNIK INFORMATIKA: DILARANG MENGGUNAKAN INI, GUNAKAN FOOTNOTE !!!!!
-$
+
 %	Halaman web, tidak perlu penjelasan. 
 %
 %	Field yang wajib ada:
@@ -414,18 +284,10 @@ $
 %
 %	Contoh penulisan di file bib:
 
-@web{erickson:03:cgmodel,
-	author 		= {Jeff Erickson},
-	title 		= {{CG} models of computation?},
-	year 		= {2003},
-	url 		= {http://www.computational-geometry.org/mailing-lists/compgeom-announce/2003-December/000852.html},
-	access 		= {30 September 2016},
-}
-
 %	12. Lain-lain
 %
 %	TIDAK DIANJURKAN UNTUK DIGUNAKAN, KONSULTASIKAN DENGAN PEMBIMBING MASING-MASING
-$
+
 %	Untuk yang tidak masuk kategori di atas, misalnya artikel di koran atau majalah. 
 %	Konsultasikan dengan pembimbing masing-masing, apakah perlu diletakkan di Daftar Referensi atau cukup untuk dijadikan footnote.
 %	Jika anda menjumpai kasus tersebut, sangat diharapkan bantuannya untuk memperbaharui template ini dengan cara
@@ -443,13 +305,6 @@ $
 %
 %	Contoh penulisan di file bib:
 
-@misc{agung:12:tango,
-	author 			= {AGUNG},
-	title 			= {Menjajal Tango 12},
-	year 			= {2012},
-	howpublished	= {Majalah HAI no 02, Januari 2012},
-	note			= {},
-}
 %_____________________________________________________________________________
 %=============================================================================
 
@@ -460,3 +315,21 @@ $
 	year={2004},
 	publisher={Thomson/Brooks/Cole Belmont\^{} eCalif Calif}
 }
+
+@inproceedings{Horster:2006:OPM:1178782.1178800,
+ author = {H\"{o}rster, E. and Lienhart, R.},
+ title = {On the Optimal Placement of Multiple Visual Sensors},
+ booktitle = {Proceedings of the 4th ACM International Workshop on Video Surveillance and Sensor Networks},
+ series = {VSSN '06},
+ year = {2006},
+ isbn = {1-59593-496-0},
+ location = {Santa Barbara, California, USA},
+ pages = {111--120},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1178782.1178800},
+ doi = {10.1145/1178782.1178800},
+ acmid = {1178800},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {camera arrays, visual sensor placement},
+} 
