--- a/Bab/bab1.tex
+++ b/Bab/bab1.tex
@@ -46,11 +46,31 @@ Masalah yang dibahas dalam skripsi ini memiliki batasan-batasan sebagai berikut:
 
 \section{Metodologi}
 \label{sec:metlit}
+\begin{itemize}
+	\item Mempelajari metode linear programming
+	\item Mempelajari metode integer programming
+	\item Mempelajari penggunaan kakas \textit{lp{\_}solve}
+	\item Melakukan pemodelan masalah
+	\item Menerapkan metode linear programming dalam penyelesaian masalah
+	\item Merancang perangkat lunak
+	\item Membangun perangkat lunak
+	\item Menguji perangkat lunak
+	\item Membuat kesimpulan
+\end{itemize}
 
 \section{Sistematika Pembahasan}
 \label{sec:sispem}
-Rencananya Bab 2 akan berisi petunjuk penggunaan template dan dasar-dasar \LaTeX.
-Mungkin bab 3,4,5 dapt diisi oleh ketiga jurusan, misalnya peraturan dasar skripsi atau pedoman penulisan, tentu jika berkenan.
-Bab 6 akan diisi dengan kesimpulan, bahwa membuat template ini ternyata sungguh menghabiskan banyak waktu.
-
-\dtext{10}
+\begin{itemize}
+	\item \textbf{Bab 1 Pendahuluan}\\
+	Pada bagian ini akan dijelaskan latar belakang masalah, rumusan masalah, tujuan dan batasan masalah. Terdapat penjelasan mengenai metodologi yang digunakan dalam melakukan penelitian ini.
+	\item \textbf{Bab 2 Landasan Teori}\\
+	Pada bagian ini terdapat pembahasan teori-teori yang digunakan untuk menyelesaikan masalah. Terdapat teori mengenai linear programming dan integer programming. Selain itu, terdapat penjelasan mengenai kakas \textit{lp{\_}solve} yang digunakan untuk membantu menyelesaikan masalah.
+	\item \textbf{Bab 3 Analisis}\\
+	Pada bagian ini terdapat penjelasan mengenai pemodelan masalah dan cara penyelesaian masalah menggunakan metode linear programming. Selain itu, terdapat analisis kebutuhan perangkat lunak yang terdiri dari diagram \textit{use case} dan diagram kelas sederhana.
+	\item \textbf{Bab 4 Perancangan}\\
+	Pada bagian ini dijelaskan bentuk perancangan antarmuka dan perancangan kelas diagram rinci yang digunakan untuk membangun perangkat lunak.
+	\item \textbf{Bab 5 Pengujian}\\
+	Pada bagian ini dibahas hasil-hasil pengujian yang dilakukan. Pengujian terdiri dari pengujian fungsional dan pengujian eksperimental.
+	\item \textbf{Bab 6 Kesimpulan dan Saran}\\
+	Pada bagian ini terdapat hal-hal apa saja yang didapatkan melalui penelitian ini. Selain itu, terdapat saran dari penulis bagi orang lain yang ingin melanjutkan penelitian ini.
+\end{itemize}
