--- a/data.tex
+++ b/data.tex
@@ -31,8 +31,8 @@
 % Isilah dengan 0 atau 1 (e.g. \daftarIsiError{1}). 
 % Pemilihan 0 atau 1 silahkan disesuaikan dengan hasil PDF yang dihasilkan.
 %=============================================================================
-%\daftarIsiError{0}   
-\daftarIsiError{1}   
+\daftarIsiError{0}   
+%\daftarIsiError{1}   
 %=============================================================================
 
 %_____________________________________________________________________________
@@ -215,7 +215,7 @@
 % - judul TIDAK ditulis dengan menggunakan huruf besar seluruhnya !!
 %=============================================================================
 \judulINA{Penghitung Jumlah Kamera Statis Minimum Dalam Suatu Ruangan Menggunakan Linear Programming}
-\judulENG{C}
+\judulENG{Finding Minimum Static Camera In A Room Using Linear Programming}
 %_____________________________________________________________________________
 %=============================================================================
 % 								BAGIAN X
@@ -231,7 +231,7 @@
 Kamera CCTV merupakan kamera yang digunakan untuk memantau suatu lokasi dengan tujuan pengawasan dan keamanan. Kamera CCTV pada umumnya dipasang di tempat-tempat strategis sehingga mendapatkan jangkauan yang baik. Penempatan kamera CCTV di ruangan yang berbentuk sederhana (persegi panjang) tidaklah sulit. Kamera CCTV yang dibutuhkan pada umumnya berjumlah dua buah saja dan dipasang di kedua sudut ruangan sehingga saling berhadapan. Namun, jika ruangan berukuran besar, maka tujuan penggunaan kamera CCTV bukan hanya untuk mendeteksi adanya orang, melainkan juga untuk mengenali orang tersebut. Hal ini tentu menyebabkan kesulitan dalam menentukan jumlah minimum dan lokasi penempatan kamera CCTV agar seluruh ruangan terjangkau. Pada skripsi ini, akan dibuat sebuah perangkat lunak yang dapat menghasilkan penempatan-penempatan kamera CCTV yang paling minimum untuk menjangkau seluruh ruangan dengan menggunakan metode linear programming.
 }
 \abstrakENG{
-hi
+CCTV cameras are cameras used to monitor a location with the purpose of surveillance and security. CCTV cameras are generally installed in strategic places to get a good coverage. Placement of CCTV cameras in a simple room (rectangle) is not difficult. CCTV cameras that are needed is two pieces only and installed in both corners of the room so they facing each other. However, if the room is large, then the purpose of using CCTV cameras is not only to detect people, but also to recognize them. This certainly causes difficulties in determining the minimum number and location of CCTV camera placement to make the whole room covered. In this thesis, a software will be created that can produce the most minimal CCTV camera placement to reach the whole room using linear programming method.
 } 
 %=============================================================================
 
@@ -244,8 +244,8 @@ hi
 % - kunciENG: keywords in english
 % Petunjuk: hilangkan tanda << & >>, dan isi sesuai dengan data anda.
 %=============================================================================
-\kunciINA{<<Tuliskan di sini kata-kata kunci yang anda gunakan, dalam bahasa Indonesia>>}
-\kunciENG{<<Tuliskan di sini kata-kata kunci yang anda gunakan, dalam bahasa Inggris>>}
+\kunciINA{cctv, linear programming}
+\kunciENG{cctv, linear programming}
 %=============================================================================
 
 %_____________________________________________________________________________
