--- a/Lampiran/lampA.tex
+++ b/Lampiran/lampA.tex
@@ -15,32 +15,43 @@
 %
 
 
-\begin{lstlisting}[language=Java, caption=MyCode.c]
+%\begin{lstlisting}[language=Java, caption=MyCode.c]
 
-// This does not make algorithmic sense, 
-// but it shows off significant programming characters.
+%// This does not make algorithmic sense, 
+%// but it shows off significant programming characters.
 
-#include<stdio.h>
+%#include<stdio.h>
 
-void myFunction( int input, float* output ) {
-	switch ( array[i] ) {
-		case 1: // This is silly code
-			if ( a >= 0 || b <= 3 && c != x )
-				*output += 0.005 + 20050;
-			char = 'g';
-			b = 2^n + ~right_size - leftSize * MAX_SIZE;
-			c = (--aaa + &daa) / (bbb++ - ccc % 2 );
-			strcpy(a,"hello $@?"); 
-	}
-	count = ~mask | 0x00FF00AA;
-}
+%void myFunction( int input, float* output ) {
+%	switch ( array[i] ) {
+%		case 1: // This is silly code
+%			if ( a >= 0 || b <= 3 && c != x )
+%				*output += 0.005 + 20050;
+%			char = 'g';
+%			b = 2^n + ~right_size - leftSize * MAX_SIZE;
+%			c = (--aaa + &daa) / (bbb++ - ccc % 2 );
+%			strcpy(a,"hello $@?"); 
+%	}
+%	count = ~mask | 0x00FF00AA;
+%}
 
-// Fonts for Displaying Program Code in LATEX
-// Adrian P. Robson, nepsweb.co.uk
-// 8 October 2012
-// http://nepsweb.co.uk/docs/progfonts.pdf
+%// Fonts for Displaying Program Code in LATEX
+%// Adrian P. Robson, nepsweb.co.uk
+%// 8 October 2012
+%// http://nepsweb.co.uk/docs/progfonts.pdf
 
-\end{lstlisting}
+%\end{lstlisting}
 
-\lstinputlisting[language=Java, caption=MyCode.java]{./Lampiran/MyCode.java} 
+%\lstinputlisting[language=Java, caption=MyCode.java]{./Lampiran/MyCode.java} 
 
+\lstinputlisting[language=Java, caption=Angle.java]{./Lampiran/Angle.java} 
+\lstinputlisting[language=Java, caption=Point.java]{./Lampiran/Point.java} 
+\lstinputlisting[language=Java, caption=CameraSpecification.java]{./Lampiran/CameraSpecification.java} 
+\lstinputlisting[language=Java, caption=CameraPlacement.java]{./Lampiran/CameraPlacement.java} 
+\lstinputlisting[language=Java, caption=Dimension.java]{./Lampiran/Dimension.java} 
+\lstinputlisting[language=Java, caption=Cell.java]{./Lampiran/Cell.java} 
+\lstinputlisting[language=Java, caption=Angle.java]{./Lampiran/Angle.java} 
+\lstinputlisting[language=Java, caption=GridPoint.java]{./Lampiran/GridPoint.java} 
+\lstinputlisting[language=Java, caption=Room.java]{./Lampiran/Room.java} 
+\lstinputlisting[language=Java, caption=MinimumCameraPlacementSolver.java]{./Lampiran/MinimumCameraPlacementSolver.java} 
+\lstinputlisting[language=Java, caption=MinimumCameraPlacementSolverLPSolve.java]{./Lampiran/MinimumCameraPlacementSolverLPSolve.java} 
